fixed top spacing

--- a/html-arret_cardiaque/style.css
+++ b/html-arret_cardiaque/style.css
@@ -132,7 +132,7 @@ header h1 {
 
 .container {
     margin-bottom: 15px;
-    padding-top: 40px;
+    padding-top: 45px;
 }
 
 /*BUTTON*/
